--- a/src/style/sections/_topbar.scss
+++ b/src/style/sections/_topbar.scss
@@ -1,6 +1,7 @@
 @import "../component/nav";
 @import "../abstract/color";
 @import "../component/triangle";
+@import "../component/layout";
 
 .topBar {
   position: absolute;
