teaching and card styling

--- a/src/style/abstract/_color.scss
+++ b/src/style/abstract/_color.scss
@@ -1,3 +1,9 @@
-$colorBlack: #000000;
 $colorGray: #808080;
 $colorPrimary: #ff7f2a;
+$colorSecondary: #1a1a1a;
+
+$colorUDD: #0062a1;
+$colorUDP: #fc4e47;
+
+$colorWhite: #ffffff;
+$colorBlack: #000000;
