--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
 @import "./sections/blog";
 @import "./sections/courses";
 @import "./sections/teaching";
+@import "./component/modal";
 
 body {
   margin: 0px;
