--- a/src/style/abstract/_fonts.scss
+++ b/src/style/abstract/_fonts.scss
@@ -9,22 +9,40 @@
 h1 {
   font-family: "Roboto";
   font-weight: 900;
-  font-size: 4.5rem;
+  font-size: 4.8rem;
   color: $colorBlack;
   line-height: 4rem;
+  margin-bottom: 1rem;
 }
 
 h2 {
   font-family: "Roboto Mono";
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: $colorPrimary;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 h3 {
   font-family: "Roboto";
   font-weight: 800;
   font-size: 1.4rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+h4 {
+  font-family: "Roboto Mono";
+  font-weight: 800;
+  font-size: 1.4rem;
+  margin-top: 0px;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .textYellow {
