--- a/src/style/component/_card.scss
+++ b/src/style/component/_card.scss
@@ -27,11 +27,15 @@
 
   .cardBackground {
     grid-area: 2/ 1 / 3 / 3;
-    background-color: $colorBlack;
-    background-blend-mode: luminosity;
-    background-size: auto;
-    background-position: center;
-    background-size: cover;
+
+    .cardMainImage {
+      grid-area: 2/ 1 / 3 / 3;
+      justify-self: center;
+      background-color: $colorBlack;
+      background-blend-mode: luminosity;
+      filter: grayscale(1);
+      height: 100%;
+    }
 
     .cardAbstract {
       padding-top: 2%;
