BlockContent Courses and Course

--- a/src/style/abstract/_color.scss
+++ b/src/style/abstract/_color.scss
@@ -4,6 +4,7 @@ $colorSecondary: #1a1a1a;
 
 $colorUDD: #0062a1;
 $colorUDP: #fc4e47;
+$colorUACH: #038563;
 
 $colorWhite: #ffffff;
 $colorBlack: #000000;
