--- a/src/style/sections/_teaching.scss
+++ b/src/style/sections/_teaching.scss
@@ -2,6 +2,7 @@
 @import "../component/cardUdd";
 @import "../component/cardUdp";
 @import "../component/card";
+@import "../component/cardUach";
 
 .mainTeaching {
   display: flex;
