--- a/src/style/abstract/_fonts.scss
+++ b/src/style/abstract/_fonts.scss
@@ -5,6 +5,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap");
+@import "./color";
 
 h1 {
   font-family: "Roboto";
@@ -26,23 +27,36 @@ h2 {
 
 h3 {
   font-family: "Roboto";
-  font-weight: 800;
-  font-size: 1.4rem;
+  font-weight: 600;
+  font-size: 1.5rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
 h4 {
   font-family: "Roboto Mono";
-  font-weight: 800;
-  font-size: 1.4rem;
+  font-weight: 400;
+  font-size: 1.7rem;
   margin-top: 0px;
   margin-bottom: 0.5rem;
 }
 
 p {
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 1.2rem;
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 2rem;
+  line-height: 1.7rem;
+  color: $colorSecondary;
+}
+
+.hyphenation {
+  text-align: justify;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 .textYellow {
@@ -66,4 +80,10 @@ strong {
   color: $colorBlack;
   line-height: 4.3rem;
   display: flex;
+}
+
+.caption {
+  margin-top: 10px;
+  font-size: 0.8rem;
+  font-family: "Roboto Mono";
 }
