--- a/src/style/sections/_courses.scss
+++ b/src/style/sections/_courses.scss
@@ -3,6 +3,10 @@
 @import "../component/cardUdp";
 @import "../component/card";
 @import "../component/button";
+@import "../component/videos";
+@import "../component/imageGallery";
+@import "../component/videoEmbed";
+@import "../component/blockImage";
 
 .mainCourse {
   display: flex;
@@ -45,6 +49,8 @@
         p {
           font-family: "Roboto Mono";
           font-size: 0.9rem;
+          color: $colorWhite;
+          margin-bottom: 0px;
         }
       }
     }
@@ -53,43 +59,5 @@
   .courseBody {
     //border-left: 2px solid $colorGray;
     width: 100%;
-  }
-}
-
-.galleryGrid {
-  margin-top: 2rem;
-  display: grid;
-  gap: 1rem 2%;
-  width: 100%;
-  grid-template-rows: 200px;
-  grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
-}
-
-.galleryItem {
-  cursor: pointer;
-  display: grid;
-  grid-template-rows: 200px;
-
-  .itemImage {
-    grid-area: 1 / 1 / 2 / 2;
-    .gatsby-image-wrapper {
-      height: 200px;
-    }
-  }
-
-  .itemSelected {
-    grid-area: 1 / 1 / 2 / 2;
-    height: 200px;
-    width: 100%;
-    display: flex;
-    background-color: hsla(0, 0%, 0%, 0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-
-    img {
-      display: flex;
-      width: 40px;
-    }
   }
 }
