--- a/src/style/sections/_teaching.scss
+++ b/src/style/sections/_teaching.scss
@@ -3,6 +3,7 @@
 @import "../component/cardUdp";
 @import "../component/card";
 @import "../component/cardUach";
+@import "../component/picker";
 
 .mainTeaching {
   display: flex;
