--- a/src/style/component/_picker.scss
+++ b/src/style/component/_picker.scss
@@ -8,10 +8,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 20px;
+  height: 60px;
 
   h2 {
     color: $colorWhite;
     padding-right: 5px;
+    margin: 0px;
   }
   .triangle {
     margin-right: 5px;
@@ -30,6 +33,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  margin-left: 20px;
   z-index: 100;
 
   .picker-ul {
@@ -43,7 +47,7 @@
       font-family: "Roboto Mono";
       font-weight: 400;
       padding-bottom: 10px;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       color: $colorWhite;
     }
   }
