--- a/src/style/sections/_teaching.scss
+++ b/src/style/sections/_teaching.scss
@@ -15,6 +15,14 @@
     display: flex;
     width: max-content;
     margin-top: 100px;
+
+    .subHeader {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-start;
+    }
   }
 }
 
@@ -24,6 +32,6 @@
   padding: 20px;
   grid-gap: 40px 40px;
   grid-auto-flow: row dense;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-bottom: 100px;
 }
