--- a/src/style/component/_button.scss
+++ b/src/style/component/_button.scss
@@ -20,10 +20,10 @@
     .name {
       grid-column: 2, 3;
       padding-left: 20px;
-      text-transform: uppercase;
-      font-family: "Roboto Mono";
+
+      font-family: "Share Tech Mono", monospace;
       font-weight: 500;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       width: max-content;
       color: $colorWhite;
       padding-top: 10px;
