--- a/src/style/component/_modal.scss
+++ b/src/style/component/_modal.scss
@@ -37,6 +37,9 @@
   align-items: center;
   justify-content: flex-end;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
 
   img {
     display: flex;
