--- a/src/style/component/_imageGallery.scss
+++ b/src/style/component/_imageGallery.scss
@@ -1,19 +1,26 @@
 @import "../abstract/color";
 @import "../abstract/fonts";
+@import "../abstract/responsive";
 
-.galleryGrid {
+.galleryContainer {
   margin-top: 2rem;
   display: grid;
-  gap: 1rem 2%;
   width: 100%;
-  grid-template-rows: 200px;
-  grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
-}
-
-.galleryItem {
-  cursor: pointer;
-  display: grid;
-  grid-template-rows: 200px;
+  grid-template-columns: 50% 50%;
+  .preImage {
+    width: 90%;
+    background-color: transparent;
+    border: transparent;
+    outline: none;
+    object-fit: none;
+    overflow: hidden;
+    .galleryItem {
+      cursor: pointer;
+      display: grid;
+      outline: none;
+      width: 800px;
+    }
+  }
 
   .itemImage {
     grid-area: 1 / 1 / 2 / 2;
@@ -36,5 +43,167 @@
       display: flex;
       width: 40px;
     }
+  }
+}
+
+.preImage {
+  width: 25%;
+  background-color: transparent;
+  border: transparent;
+  outline: none;
+  object-fit: none;
+  overflow: hidden;
+}
+
+.galleryItem {
+  cursor: pointer;
+  outline: none;
+  width: 1000px;
+}
+
+.overlay {
+  background: white;
+  opacity: 0.2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.single-image-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
+
+.single-image-container * {
+  pointer-events: all;
+}
+
+.single-image {
+  border-radius: 20px;
+  width: 1000px;
+}
+
+/*------------------card-------------------*/
+.card-list {
+  display: grid;
+  width: 100%;
+  margin-top: 2rem;
+  grid-template-columns: 50% 50%;
+
+  @include tablet {
+    grid-template-columns: 50% 50%;
+  }
+}
+
+.card {
+  position: relative;
+  height: 80px;
+  max-width: 100%;
+  padding: 5px;
+  cursor: pointer;
+
+  @include tablet {
+    height: 220px;
+  }
+}
+
+.card-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(0, 0%, 0%, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.card-content-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  pointer-events: none;
+}
+
+.card-content-container.open {
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  position: fixed;
+  z-index: 20;
+  overflow: hidden;
+  display: flex;
+  pointer-events: all;
+}
+
+.card-content {
+  pointer-events: auto;
+  position: relative;
+  background: #1c1c1e;
+  overflow: hidden;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.open .card-content {
+  width: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include tablet {
+    width: 700px;
+  }
+  @include desktop {
+    width: 900px;
+  }
+  @include large {
+    width: 1100px;
+  }
+}
+
+.card-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.open .card-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card-image {
+  width: 100%;
+}
+
+.open .card-image {
+  width: 100%;
+
+  @include tablet {
+    width: 700px;
+  }
+  @include desktop {
+    width: 900px;
+  }
+  @include large {
+    width: 1100px;
   }
 }
