--- a/src/style/component/_picker.scss
+++ b/src/style/component/_picker.scss
@@ -1,28 +1,32 @@
 @import "../abstract/color";
 @import "../abstract/fonts";
 
-.picker {
-  cursor: pointer;
-  background-color: $colorPrimary;
-  width: 180px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 20px;
-  height: 60px;
+.pickerRoot {
+  background-color: transparent;
+  border: transparent;
+  .picker {
+    cursor: pointer;
+    background-color: $colorPrimary;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    height: 60px;
 
-  h2 {
-    color: $colorWhite;
-    padding-right: 5px;
-    margin: 0px;
-  }
-  .triangle {
-    margin-right: 5px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 10px 10px 0 10px;
-    border-color: $colorWhite transparent transparent transparent;
+    h2 {
+      color: $colorWhite;
+      padding-right: 5px;
+      margin: 0px;
+    }
+    .triangle {
+      margin-right: 5px;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px 10px 0 10px;
+      border-color: $colorWhite transparent transparent transparent;
+    }
   }
 }
 
@@ -41,14 +45,19 @@
     padding: 0px;
 
     li {
-      cursor: pointer;
-      text-decoration: none;
       list-style: none;
-      font-family: "Roboto Mono";
-      font-weight: 400;
-      padding-bottom: 10px;
-      font-size: 1.4rem;
-      color: $colorWhite;
+
+      .categoryButton {
+        cursor: pointer;
+        background-color: transparent;
+        border: transparent;
+        text-decoration: none;
+        font-family: "Roboto Mono";
+        font-weight: 400;
+        padding-bottom: 10px;
+        font-size: 1.4rem;
+        color: $colorWhite;
+      }
     }
   }
 }
