--- a/src/style/component/_videoEmbed.scss
+++ b/src/style/component/_videoEmbed.scss
@@ -1,10 +1,23 @@
 @import "../abstract/color";
 @import "../abstract/fonts";
+@import "../abstract/responsive";
 
 .videoEmbedContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  height: 350px;
+
+  @include tablet {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: auto;
+  }
+
+  @include desktop {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
