--- a/src/style/component/_videos.scss
+++ b/src/style/component/_videos.scss
@@ -1,12 +1,18 @@
 @import "../abstract/fonts";
+@import "../abstract/responsive";
 
 .videosContainer {
   display: flex;
+  flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 20px;
   margin-bottom: 20px;
+
+  @include tablet {
+    flex-direction: row;
+  }
 
   .oneVideoitem {
     width: 100%;
@@ -16,32 +22,65 @@
 
     video {
       width: 100%;
+      height: 350px;
+
+      @include tablet {
+        height: 400px;
+      }
+
+      @include desktop {
+        height: 500px;
+      }
     }
   }
 
   .twoVideoitem {
-    width: 48%;
+    width: 49%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    @include tablet {
+      width: 48%;
+    }
+
     video {
       width: 100%;
-      height: 500px;
+      height: 250px;
       object-fit: cover;
+
+      @include tablet {
+        height: 400px;
+      }
+
+      @include desktop {
+        height: 500px;
+      }
     }
   }
 
   .threeVideoitem {
-    width: 30.6%;
+    width: 32.5%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    @include tablet {
+      width: 30.6%;
+    }
+
     video {
       width: 100%;
-      height: 400px;
+      height: 250px;
       object-fit: cover;
+
+      @include tablet {
+        height: 370px;
+      }
+
+      @include desktop {
+        height: 500px;
+      }
     }
   }
 }
