--- a/src/style/abstract/_fonts.scss
+++ b/src/style/abstract/_fonts.scss
@@ -5,12 +5,13 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap");
 @import "./color";
 @import "./responsive";
 
 h1 {
-  font-family: "Roboto";
-  font-weight: 900;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 700;
   font-size: 3rem;
   color: $colorBlack;
   line-height: 2.5rem;
