--- a/src/style/component/_card.scss
+++ b/src/style/component/_card.scss
@@ -1,76 +1,61 @@
 @import "../abstract/color";
 @import "../abstract/fonts";
+@import "../abstract/responsive";
 
-@mixin card {
-  display: grid;
-  grid-template-columns: 60% 40%;
-  grid-template-rows: 20% 65% 15%;
-  max-width: 100%;
-  height: 550px;
-  background-color: $colorPrimary;
-  //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+.card-root {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: 450px;
+  max-width: 400px;
 
-  .cardTitle {
-    grid-area: 1 / 1 / 2 / 3;
+  .image-content {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+
+    .image-content-animation {
+      height: 100%;
+      .card-image {
+        height: 100%;
+      }
+    }
+  }
+
+  .info-content {
+    position: absolute;
+    display: flex;
     color: $colorWhite;
-    padding-left: 20px;
-    padding-right: 20px;
-    align-self: center;
+    z-index: 2;
+    width: 180px;
+    background-color: $colorBlack;
+
+    @include tablet {
+      width: 250px;
+    }
 
     .subtitle {
-      font-family: "Roboto Mono";
+      font-family: "Share Tech Mono", monospace;
       font-weight: 400;
-      font-size: 1rem;
+      font-size: 1.1rem;
       text-decoration: none;
+      color: $colorGray;
     }
-  }
-
-  .cardBackground {
-    grid-area: 2/ 1 / 3 / 3;
-
-    .cardMainImage {
-      grid-area: 2/ 1 / 3 / 3;
-      //justify-self: center;
-      //background-color: $colorBlack;
-      //background-blend-mode: luminosity;
-      //filter: grayscale(1);
-      height: 100%;
+    .info-open {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      p {
+        color: $colorGray;
+        font-family: "Roboto Mono", monospace;
+        font-size: 1rem;
+        margin-bottom: 1rem;
+        color: $colorWhite;
+        font-weight: 500;
+      }
     }
-
-    .cardAbstract {
-      padding-top: 2%;
-      height: 100%;
-      grid-area: 2/ 1 / 3 / 3;
-      color: $colorWhite;
-      //background-color: rgba(255, 127, 42, 0.9);
-      //background-color: rgba(0, 0, 0, 0.9);
-      background-color: $colorPrimary;
-      font-family: "Roboto Mono";
-      padding-left: 20px;
-      padding-right: 20px;
-      font-weight: 500;
-      font-size: 1rem;
-      text-align: justify;
-      text-justify: inter-character;
-    }
-  }
-
-  .cardCategory {
-    margin-bottom: 0px;
-    padding-left: 20px;
-    grid-area: 3 / 1 / 4 / 2;
-    align-self: center;
-    h4 {
-      margin-bottom: 0px;
-      font-weight: 600;
-      font-size: 1.3rem;
-    }
-  }
-
-  .cardArrow {
-    grid-area: 3 / 2 / 4 / 3;
-    color: $colorWhite;
-    align-self: center;
-    justify-self: center;
   }
 }
