--- a/src/style/sections/_courses.scss
+++ b/src/style/sections/_courses.scss
@@ -1,6 +1,4 @@
 @import "../abstract/fonts";
-@import "../component/cardUdd";
-@import "../component/cardUdp";
 @import "../component/card";
 @import "../component/button";
 @import "../component/videos";
@@ -9,32 +7,122 @@
 @import "../component/blockImage";
 @import "../abstract/responsive";
 
-.mainCourse {
-  display: flex;
-  justify-content: center;
-  width: 100%;
+.course-root {
+  max-width: 1300px;
+  margin: auto;
+  margin-top: 100px;
 
-  .layoutCourse {
-    display: flex;
-    flex-direction: column;
-    max-width: 1300px;
-    margin-top: 100px;
+  @include desktop {
+    margin-top: 200px;
   }
 }
 
-.courseInfo {
+.course-header {
   display: flex;
   flex-direction: column-reverse;
-  margin-top: 20px;
-  margin-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @include desktop {
     flex-direction: row;
   }
 
-  .courseStats {
+  @include large {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
+.course-header-info {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 80px;
+  width: 100%;
+
+  @include desktop {
+    width: 400px;
+  }
+
+  display: flex;
+  flex-direction: column;
+
+  .course-header-title {
+    font-size: 2.5rem;
+    line-height: 100%;
+
+    @include tablet {
+      font-size: 3.2rem;
+    }
+
+    @include desktop {
+      margin-top: -0.45rem;
+      font-size: 3.5rem;
+    }
+  }
+  .course-header-stat {
+    .course-header-stat-class {
+      font-family: "Share Tech Mono", monospace;
+      color: $colorPrimary;
+      font-size: 1rem;
+      margin-bottom: 0px;
+    }
+    .course-header-stat-info {
+      font-family: "Roboto Mono", monospace;
+      color: $colorBlack;
+      font-size: 1rem;
+      font-weight: 500;
+      margin-bottom: 0px;
+      word-wrap: break-word;
+    }
+  }
+}
+
+.course-header-image-content {
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+  height: 300px;
+
+  @include tablet {
+    height: 360px;
+  }
+
+  @include desktop {
+    height: 450px;
+  }
+
+  .header-image {
+    height: 100%;
+  }
+}
+
+.course-body {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 50px;
+
+  @include desktop {
+    flex-direction: row;
+    margin-top: 100px;
+
+    @include large {
+      padding-left: 0px;
+      padding-right: 0px;
+      margin-bottom: 0px;
+    }
+  }
+
+  .course-body-links-buttons {
     display: flex;
     flex-direction: column;
+    width: auto;
+    flex-shrink: 0;
 
     @include tablet {
       flex-direction: row;
@@ -43,46 +131,34 @@
 
     @include desktop {
       flex-direction: column;
-      position: sticky;
-      margin-right: 20px;
-      justify-content: flex-start;
+      width: 400px;
+      padding-right: 0px;
+      margin-right: 80px;
     }
-    .courseItem {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
 
-      @include tablet {
-        width: 49%;
-        flex-direction: row;
-        padding-bottom: 20px;
-      }
-
-      @include desktop {
-        width: 100%;
-        flex-direction: column;
-        padding-bottom: 20px;
-      }
-
-      .courseContent {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 2;
-        padding: 15px;
-        color: $colorWhite;
-        background: $colorSecondary;
-        p {
-          font-family: "Roboto Mono";
-          font-size: 0.9rem;
-          color: $colorWhite;
-          margin-bottom: 0px;
-        }
-      }
+    h3 {
+      font-family: "Titillium Web", sans-serif;
+      margin-bottom: 0px;
+      font-size: 1.8rem;
     }
   }
 
-  .courseBody {
-    //border-left: 2px solid $colorGray;
-    width: 100%;
+  .course-body-description {
+    h3 {
+      font-family: "Titillium Web", sans-serif;
+      margin-bottom: 15px;
+      font-size: 1.8rem;
+    }
+  }
+}
+
+.button-collection {
+  margin-top: 15px;
+  p {
+    font-family: "Roboto Mono", monospace;
+    color: $colorBlack;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 0px;
   }
 }
