--- a/src/style/sections/_teaching.scss
+++ b/src/style/sections/_teaching.scss
@@ -1,37 +1,55 @@
 @import "../abstract/fonts";
-@import "../component/cardUdd";
-@import "../component/cardUdp";
 @import "../component/card";
-@import "../component/cardUach";
 @import "../component/picker";
+@import "../abstract/responsive";
 
 .mainTeaching {
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
 
   .intro {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     width: max-content;
     margin-top: 100px;
 
     .subHeader {
-      margin-top: 30px;
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-end;
+
+      @include tablet {
+        flex-direction: row;
+        justify-content: flex-start;
+      }
     }
   }
 }
 
 .teachingGrid {
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 400px));
-  padding: 20px;
-  grid-gap: 40px 40px;
+  grid-template-columns: 100%;
+  grid-gap: 40px;
+  padding: 25px;
   grid-auto-flow: row dense;
   margin-top: 30px;
-  margin-bottom: 100px;
+
+  @include tablet {
+    grid-template-columns: repeat(2, minmax(350px, 400px));
+    grid-gap: 10px 10px;
+  }
+
+  @include desktop {
+    grid-template-columns: repeat(2, minmax(350px, 400px));
+    grid-gap: 30px 30px;
+  }
+
+  @include large {
+    grid-template-columns: repeat(3, minmax(350px, 400px));
+    grid-gap: 40px 40px;
+  }
 }
