--- a/src/style/component/_card.scss
+++ b/src/style/component/_card.scss
@@ -36,25 +36,29 @@
     @include tablet {
       width: 250px;
     }
-
-    .subtitle {
-      font-family: "Share Tech Mono", monospace;
-      font-weight: 400;
-      font-size: 1.1rem;
-      text-decoration: none;
-      color: $colorGray;
-    }
-    .info-open {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      p {
-        color: $colorGray;
-        font-family: "Roboto Mono", monospace;
+    .card-title {
+      .subtitle {
+        font-family: "Share Tech Mono", monospace;
         font-size: 1rem;
-        margin-bottom: 1rem;
-        color: $colorWhite;
-        font-weight: 500;
+        text-decoration: none;
+        color: $colorGray;
+      }
+      h3 {
+        font-weight: 700;
+        font-size: 1.15rem;
+      }
+      .info-open {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        p {
+          color: $colorGray;
+          font-family: "Roboto Mono", monospace;
+          font-size: 0.9rem;
+          margin-bottom: 1rem;
+          color: $colorWhite;
+          font-weight: 500;
+        }
       }
     }
   }
