--- a/src/style/component/_imageGallery.scss
+++ b/src/style/component/_imageGallery.scss
@@ -2,13 +2,25 @@
 @import "../abstract/fonts";
 @import "../abstract/responsive";
 
-/*------------------card-------------------*/
 .card-list {
   display: grid;
   width: 100%;
   margin-top: 2rem;
   grid-template-columns: 48% 48%;
   column-gap: 4%;
+  row-gap: 12px;
+
+  @include tablet {
+    row-gap: 30px;
+  }
+
+  @include desktop {
+    row-gap: 20px;
+  }
+
+  @include large {
+    row-gap: 35px;
+  }
 }
 
 .card {
