--- a/src/style/component/_picker.scss
+++ b/src/style/component/_picker.scss
@@ -15,20 +15,18 @@
 
   .picker {
     cursor: pointer;
-    background-color: $colorPrimary;
+    //background-color: $colorPrimary;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 0px;
-    height: 60px;
-
-    @include tablet {
-      margin-left: 20px;
-    }
+    //height: 60px;
 
     h2 {
-      color: $colorWhite;
+      font-family: "Share Tech Mono", monospace;
+      color: $colorPrimary !important;
+      font-size: 1.8rem;
       padding-right: 5px;
       margin: 0px;
     }
@@ -37,20 +35,20 @@
       width: 0;
       height: 0;
       border-style: solid;
-      border-width: 10px 10px 0 10px;
-      border-color: $colorWhite transparent transparent transparent;
+      border-width: 12.5px 8px 0 8px;
+      border-color: $colorPrimary transparent transparent transparent;
     }
   }
 }
 
 .picker-nav {
-  background-color: $colorPrimary;
+  background-color: $colorWhite;
   width: 130px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  margin-left: 20px;
+
   z-index: 100;
 
   @include tablet {
@@ -69,11 +67,11 @@
         background-color: transparent;
         border: transparent;
         text-decoration: none;
-        font-family: "Roboto Mono";
-        font-weight: 400;
-        padding-bottom: 10px;
+        font-family: "Share Tech Mono", monospace;
+        padding-top: 10px;
+
         font-size: 1.4rem;
-        color: $colorWhite;
+        color: $colorSecondary;
       }
     }
   }
