--- a/src/style/sections/_courses.scss
+++ b/src/style/sections/_courses.scss
@@ -6,6 +6,7 @@
 @import "../component/videoEmbed";
 @import "../component/blockImage";
 @import "../abstract/responsive";
+@import "../component/back-button";
 
 .course-root {
   max-width: 1300px;
@@ -51,14 +52,11 @@
   .course-header-title {
     font-size: 2.5rem;
     line-height: 100%;
-
-    @include tablet {
-      font-size: 3.2rem;
-    }
+    //font-family: "Titillium Web", sans-serif;
+    //text-transform: none;
 
     @include desktop {
-      margin-top: -0.45rem;
-      font-size: 3.5rem;
+      margin-top: -0.3rem;
     }
   }
   .course-header-stat {
@@ -72,7 +70,7 @@
       font-family: "Roboto Mono", monospace;
       color: $colorBlack;
       font-size: 1rem;
-      font-weight: 500;
+      font-weight: 400;
       margin-bottom: 0px;
       word-wrap: break-word;
     }
@@ -117,37 +115,45 @@
       margin-bottom: 0px;
     }
   }
-
-  .course-body-links-buttons {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    flex-shrink: 0;
+  .course-body-links {
+    margin-top: 30px;
 
     @include tablet {
-      flex-direction: row;
-      justify-content: space-between;
+      margin-top: 0px;
+      height: max-content;
+      position: sticky;
+      position: -webkit-sticky;
+      top: 50px;
     }
-
-    @include desktop {
-      flex-direction: column;
-      width: 400px;
-      padding-right: 0px;
-      margin-right: 80px;
-    }
-
     h3 {
-      font-family: "Titillium Web", sans-serif;
       margin-bottom: 0px;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
+    }
+    .course-body-links-buttons {
+      display: flex;
+      flex-direction: column;
+      width: auto;
+      flex-shrink: 0;
+
+      @include tablet {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      @include desktop {
+        flex-direction: column;
+        width: 400px;
+        padding-right: 0px;
+        margin-right: 80px;
+      }
     }
   }
 
   .course-body-description {
     h3 {
-      font-family: "Titillium Web", sans-serif;
       margin-bottom: 15px;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
+      font-weight: 400;
     }
   }
 }
@@ -158,7 +164,7 @@
     font-family: "Roboto Mono", monospace;
     color: $colorBlack;
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 300;
     margin-bottom: 0px;
   }
 }
