--- a/src/style/abstract/_fonts.scss
+++ b/src/style/abstract/_fonts.scss
@@ -14,8 +14,10 @@ h1 {
   font-weight: 400;
   font-size: 3rem;
   color: $colorBlack;
-  line-height: 2.5rem;
-  margin-bottom: 0.5rem;
+  line-height: 2rem;
+  margin-bottom: 0rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
   @include tablet {
     font-size: 2.7rem;
     line-height: 1rem;
@@ -51,6 +53,15 @@ h4 {
   font-weight: 400;
   text-transform: uppercase;
   font-size: 1.3rem;
+  margin-top: 0px;
+  margin-bottom: 0.5rem;
+}
+
+h5 {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1rem;
   margin-top: 0px;
   margin-bottom: 0.5rem;
 }
