--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -22,3 +22,24 @@ figure {
     width: 100%;
   }
 }
+
+.smooth-scroll-body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border: 3px solid red;
+}
+
+.smooth-scroll-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  z-index: 2;
+  border: 3px solid blue;
+}
