Course body divide in componenets

--- a/src/style/sections/_courses.scss
+++ b/src/style/sections/_courses.scss
@@ -143,6 +143,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  margin-top: 10px;
 }
 
 .course-body {
@@ -225,6 +226,7 @@
 
   .course-body-description {
     h3 {
+      margin-top: 10px;
       margin-bottom: 15px;
       font-size: 1.6rem;
       font-weight: 400;
