--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,10 +5,12 @@
 @import "./sections/teaching";
 @import "./component/modal";
 @import "./abstract/fonts";
+@import "./component/single-image";
 
 body {
   margin: 0px;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 a {
