--- a/src/style/component/_single-image.scss
+++ b/src/style/component/_single-image.scss
@@ -6,35 +6,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  flex-direction: column-reverse;
 
   @include tablet {
+    flex-direction: column-reverse;
     overflow: auto;
-    height: 100vh;
+    height: auto;
   }
 
   @include desktop {
-    flex-direction: column;
+    flex-direction: row;
     overflow: hidden;
-    height: 100vh;
   }
 }
-.single-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid blue;
-  width: 100%;
-  height: 100%;
-}
+
 .single-image-body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   background: $colorSecondary;
-  //border: 4px solid red;
-  height: 100%;
+  height: 100vh;
 
   @include tablet {
     width: 100%;
@@ -58,7 +50,6 @@
 .single-image-content {
   display: flex;
   justify-content: space-between;
-  //border: 3px solid pink;
   width: 100%;
   height: 100%;
   z-index: 20;
@@ -73,7 +64,8 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  //border: 3px solid goldenrod;
+  margin-top: 50px;
+  margin-bottom: 50px;
 
   @include tablet {
     width: 100%;
@@ -81,10 +73,14 @@
 
   @include desktop {
     width: 40%;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   @include large {
     width: 25%;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .single-image-header-content {
