--- a/src/style/component/_single-image.scss
+++ b/src/style/component/_single-image.scss
@@ -21,66 +21,138 @@
 }
 
 .single-image-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 10% 80% 10%;
+  grid-template-columns: 5% 90% 5%;
   background: $colorSecondary;
   height: 100vh;
-
-  @include tablet {
-    width: 100%;
-  }
+  width: 100%;
 
   @include desktop {
     width: 60%;
+    grid-template-columns: 10% 80% 10%;
   }
 
   @include large {
     width: 75%;
   }
 }
-.single-image-arrow-button {
+.single-image-body-Mobil-title {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  z-index: 100;
+  align-self: center;
+  display: flex;
+  justify-content: space-between;
+
+  .back-button-root {
+    margin-top: 0;
+  }
+  button {
+    color: white;
+    font-family: "Robot Mono", monospace;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    font-weight: 400;
+    text-transform: uppercase;
+    background: transparent;
+    outline: transparent;
+    border: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+    .info-indicator {
+      color: $colorPrimary;
+      font-size: 1.8rem;
+      font-weight: 700;
+      padding-bottom: 5px;
+    }
+  }
+}
+
+.single-image-body-mabil-footer {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  //border: 1px solid green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  p {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  .single-image-body-caption {
+    color: $colorWhite;
+    font-family: "Roboto Mono", monospace;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .sinlge-image-number-caption {
+    display: flex;
+  }
+}
+
+.single-image-content {
+  grid-row: 2/3;
+  grid-column: 1/4;
+  justify-self: center;
+
+  @include desktop {
+    grid-row: 1/4;
+    grid-column: 2;
+  }
+
+  .fullsize-image {
+    height: 100%;
+    max-width: 1000px;
+  }
+}
+
+.single-image-arrow-button-left {
+  grid-row: 2/3;
+  grid-column: 1;
   background: transparent;
   outline: transparent;
   border: transparent;
   cursor: pointer;
 }
 
-.single-image-content {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  z-index: 20;
-}
-.fullsize-image {
-  height: 100%;
-  max-width: 1000px;
+.single-image-arrow-button-right {
+  grid-row: 2/3;
+  grid-column: 3;
+  background: transparent;
+  outline: transparent;
+  border: transparent;
+  cursor: pointer;
 }
 
 .single-image-header {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  width: 100%;
+  top: 10%;
+  bottom: 10%;
+  background-color: $colorWhite;
+  z-index: 30;
 
   @include tablet {
-    width: 100%;
+    top: auto;
+    bottom: auto;
+    padding: 30px;
+    width: auto;
   }
 
   @include desktop {
+    position: relative;
+    height: 100%;
     width: 40%;
-    margin-top: 0px;
-    margin-bottom: 0px;
   }
 
   @include large {
     width: 25%;
-    margin-top: 0px;
-    margin-bottom: 0px;
   }
 
   .single-image-header-content {
