--- a/src/style/component/_single-image.scss
+++ b/src/style/component/_single-image.scss
@@ -7,11 +7,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column-reverse;
+  //border: 2px solid pink;
+  height: 100%;
 
   @include tablet {
     flex-direction: column-reverse;
     overflow: auto;
-    height: auto;
   }
 
   @include desktop {
@@ -22,10 +23,10 @@
 
 .single-image-body {
   display: grid;
+  height: 100%;
   grid-template-rows: 10% 80% 10%;
   grid-template-columns: 5% 90% 5%;
   background: $colorSecondary;
-  height: 100vh;
   width: 100%;
 
   @include desktop {
