--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,8 +9,8 @@
 
 body {
   margin: 0px;
-  overflow: auto;
-  scroll-behavior: smooth;
+  //overflow: auto;
+  //scroll-behavior: smooth;
 }
 
 a {
@@ -23,25 +23,4 @@ figure {
   img {
     width: 100%;
   }
-}
-
-.smooth-scroll-body {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  border: 3px solid red;
-}
-
-.smooth-scroll-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  overflow: hidden;
-  z-index: 2;
-  border: 3px solid blue;
 }
